--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,16 +5,16 @@ stages:
 
 build_job:
   stage: build
-  tag: aws
+  tags: aws
   script:
     - echo $CI_JOB_NAME
 unit_job:
   stage: test
-  tag: aws
+  tags: aws
   script:
     - echo $CI_JOB_NAME
 list_job:
-  tag: aws
+  tags: aws
   stage: test
   script:
     - echo $CI_JOB_NAME
@@ -22,7 +22,7 @@ list_job:
 deploy_job:
   when: manual
   stage: deploy
-  tag: aws
+  tags: aws
   script:
     - echo $CI_JOB_NAME
      
