--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,18 +5,21 @@ stages:
 
 build_job:
   stage: build
-  tags: 
+  tags:
+    - aws 
     - my_runner
   script:
     - echo $CI_JOB_NAME
 unit_job:
   stage: test
-  tags: 
+  tags:
+    - aws
     - my_runner
   script:
     - echo $CI_JOB_NAME
 list_job:
-  tags: 
+  tags:
+    - aws
     - my_runner
   stage: test
   script:
@@ -25,7 +28,8 @@ list_job:
 deploy_job:
   when: manual
   stage: deploy
-  tags: 
+  tags:
+    - aws
     - my_runner
   script:
     - echo $CI_JOB_NAME
