--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,3 +1,4 @@
+image: ibmcom/cmake
 stages:
   - build
   - test
@@ -9,21 +10,11 @@ build_job:
     - aws 
   script:
     - echo $CI_JOB_NAME
-unit_job:
-  stage: test
-  tags:
-    - aws
-  script:
-    - echo $CI_JOB_NAME
-list_job:
-  tags:
-    - aws
-  stage: test
-  script:
-    - echo $CI_JOB_NAME
-  when: always
+    - cd build
+    - cmake ..
+    - make
+    
 deploy_job:
-  when: manual
   stage: deploy
   tags:
     - aws
