--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-image: ibmcom/cmake
+image: registry.gitlab.com/opusdv/liblogur/cmake 
 stages:
   - build
   - test
@@ -12,7 +12,6 @@ build_job:
     - echo $CI_JOB_NAME
     - cd build
     - cmake ..
-    - make
     
 deploy_job:
   stage: deploy
