--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ build_bin_job:
     expire_in: 1 week
 
 upload_job:
+  image: curlimages/curl:latest
   stage: upload
   needs: ["build_bin_job"]
   script:
-    - ls -l
+    - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file build/liblogur-0.0.1-1.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/my_package/0.0.1/liblogur-0.0.1-1.rpm"'
