--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
-cmake_minimum_required(VERSION 3.21.3)
-project(logur VERSION 0.0.1 DESCRIPTION "lib for logging" LANGUAGES C)
+cmake_minimum_required(VERSION $ENV{CMAKE_VERSION})
+project(logur VERSION $ENV{VERSION} DESCRIPTION "lib for logging" LANGUAGES C)
 include(GNUInstallDirs)
 
 add_library(logur SHARED src/logur.c)
@@ -28,5 +28,5 @@ set(CPACK_PACKAGE_RELEASE 1)
 set(CPACK_PACKAGE_CONTACT "Donatas Vaytukaytis")
 set(CPACK_PACKAGE_VENDOR "opusdv.online")
 set(CPACK_PACKAGING_INSTALL_PREFIX ${CMAKE_INSTALL_PREFIX})
-set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}")
+set(CPACK_PACKAGE_FILE_NAME "${CPACK_PACKAGE_NAME}-${CPACK_PACKAGE_VERSION}-${CPACK_PACKAGE_RELEASE}-$ENV{CI_PIPELINE_ID}")
 include(CPack)
