--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,7 +23,7 @@ build_bin_job:
     - ls -l 
   artifacts:
     paths:
-      - build/liblogur-0.0.1-1.rpm
+      - build/liblogur-0.0.1-1-$CI_PIPELINE_ID.rpm
     expire_in: 1 week
 
 upload_job:
