--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,7 @@ variables:
 stages:
   - build
   - upload
+  - release
 
 build_bin_job:
   stage: build 
@@ -29,8 +30,27 @@ build_bin_job:
 upload_job:
   image: curlimages/curl:latest
   stage: upload
-  needs: ["build_bin_job"]
+  needs: 
+    - job: build_bin_job
+      artifacts: true
   script:
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file build/liblogur-0.0.1-1.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/my_package/0.0.1/liblogur-0.0.1-1.rpm"'
   only:
     - merge_requests
+
+release_job:
+  stage: release
+  image: registry.gitlab.com/gitlab-org/release-cli:latest
+  rule:
+    - if: $CI_COMMIT_TAG
+  scripts:
+    - echo "CREATE RELEASE"
+  release:
+    name: "Release $CI_COMMIT_TAG"
+    description: 'Created using the release-cli $EXTRA_DESCRIPTION'
+    tag_name: $CI_COMMIT_TAG
+    ref: $CI_COMMIT_TAG
+    milestones:
+      - 'm1'
+      - 'm2'
+      - 'm3'
