--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,11 +39,11 @@ upload_job:
     - merge_requests
 
 release_job:
-  stage: release
   image: registry.gitlab.com/gitlab-org/release-cli:latest
-  rule:
+  stage: release
+  rules:
     - if: $CI_COMMIT_TAG
-  scripts:
+  script:
     - echo "CREATE RELEASE"
   release:
     name: "Release $CI_COMMIT_TAG"
