--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -39,6 +39,9 @@ upload_job:
 release_job:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
   stage: release
+  needs:
+    - job: build_bin_job
+      artifacts: true
   rules:
     - if: $CI_COMMIT_TAG
   script:
@@ -50,3 +53,7 @@ release_job:
     ref: $CI_COMMIT_TAG
     milestones:
       - 'm1'
+    assets:
+      links:
+        - name: "Lib RPM Package"
+          filepath: build/liblogur-0.0.1-1-$CI_PIPELINE_ID.rpm
