--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,7 +48,7 @@ release_job:
   rules:
     - if: $CI_COMMIT_TAG
   only:
-    - master
+    - main
   script:
     - echo "CREATE RELEASE"
   release:
