--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,9 +2,7 @@ default:
   image: registry.gitlab.com/opusdv/liblogur/cmake
   tags: 
     - aws
-  only:
-    - dev-v[0-9].[0-9].[0-9]
-    
+  
 variables:
   CMAKE_VERSION: "3.22"
 
@@ -15,7 +13,7 @@ stages:
   - upload
   - release
 
-build_bin_job:
+dev_build_bin_job:
   stage: build 
   script:
     - echo $CI_JOB_NAME
@@ -25,12 +23,14 @@ build_bin_job:
     - make
     - cpack
     - ls -l
+  only:                                                                                                       
+    - dev-v[0-9].[0-9].[0-9] 
   artifacts:
     paths:
       - build/liblogur-$VERSION-$CI_PIPELINE_ID.rpm
     expire_in: 1 week
 
-upload_rpm_job:
+dev_upload_rpm_job:
   image: curlimages/curl:latest
   stage: upload
   needs: 
@@ -38,6 +38,8 @@ upload_rpm_job:
       artifacts: true
   script:
     - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file build/liblogur-$CI_COMMIT_BRANCH-$CI_PIPELINE_ID.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/liblogur/$CI_COMMIT_BRANCH/liblogur-$COMMIT_BRANCH-$CI_PIPELINE_ID.rpm"'
+  only:                                                                                                       
+    - dev-v[0-9].[0-9].[0-9]
 
 release_job:
   image: registry.gitlab.com/gitlab-org/release-cli:latest
