--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -49,8 +49,7 @@ release_job:
       artifacts: true
   rules:
     - if: $CI_COMMIT_TAG
-  only:
-    - main
+    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"
   script:
     - echo "CREATE RELEASE"
   release:
