--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,8 @@ default:
   
 variables:
   CMAKE_VERSION: "3.22"
+  SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"
+  GIT_DEPTH: "0"
 
 stages:
   - check
@@ -13,22 +15,58 @@ stages:
   - upload
   - release
 
-sonarqube-check:
-  image: 
-    name: sonarsource/sonar-scanner-cli:latest
-    entrypoint: [""]
-  variables:
-    SONAR_USER_HOME: "${CI_PROJECT_DIR}/.sonar"  # Defines the location of the analysis task cache
-    GIT_DEPTH: "0"  # Tells git to fetch all the branches of the project, required by the analysis task
+get-sonar-binaries:
+  stage: .pre
   cache:
-    key: "${CI_JOB_NAME}"
+    policy: push
+    key: "${CI_COMMIT_SHORT_SHA}"
     paths:
-      - .sonar/cache
-  script: 
-    - sonar-scanner
-  allow_failure: true
+      - build-wrapper/
+      - sonar-scanner/
+  script:
+    # Download sonar-scanner
+    - curl -sSLo ./sonar-scanner.zip 'https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip'
+    - unzip -o sonar-scanner.zip
+    - mv sonar-scanner-4.7.0.2747-linux sonar-scanner
+    # Download build-wrapper
+    - curl -sSLo ./build-wrapper-linux-x86.zip "${SONAR_HOST_URL}/static/cpp/build-wrapper-linux-x86.zip"
+    - unzip -oj build-wrapper-linux-x86.zip -d ./build-wrapper
   only:
-    - main # or the name of your main branch
+    - merge_requests
+    - main
+
+dev_build_job:
+  stage: build
+  cache:
+    policy: pull-push
+    key: "${CI_COMMIT_SHORT_SHA}"
+    paths:
+      - build-wrapper/
+      - sonar-scanner/
+      - bw-output/
+    script:
+      - echo $CI_JOB_NAME
+      - cmake/cmake .
+      - build-wrapper/build-wrapper-linux-x86-64 --out-dir bw-output cmake/cmake --build .  --target logur
+    only:                                                                                                       
+      - merge_requests                                                                                          
+      - main
+sonarcloud-check:
+  stage: .post
+  cache:
+    policy: pull
+    key: "${CI_COMMIT_SHORT_SHA}"
+    paths:
+      - build-wrapper/
+      - sonar-scanner/
+      - bw-output/
+  script:
+    - sonar-scanner/bin/sonar-scanner -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.token="${SONAR_TOKEN}" -Dsonar.cfamily.build-wrapper-output=bw-output
+  only:
+    - merge_requests
+    - main                                       
+            
+
 
 dev_linter:
   stage: check
@@ -36,18 +74,6 @@ dev_linter:
     - echo "Start linter cmake-format LLVM Style"
     - clang-format -i $(find . -name "*.c")
     - clang-format -i $(find . -name "*.h")
-
-dev_build_bin_job:
-  stage: build 
-  script:
-    - echo $CI_JOB_NAME
-    - mkdir build
-    - cd build
-    - cmake ..
-    - make
-    - ls -l
-  only:                                                                                                       
-    - dev-v[0-9].[0-9].[0-9] 
 
 dev_unit_testing_job:
   stage: test
