--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -47,6 +47,8 @@ dev_build_job:
   script:
     - echo $CI_JOB_NAME
     - ls -l
+    - cd cmake
+    - cmake .
     - build-wrapper/build-wrapper-linux-x86-64 --out-dir bw-output cmake/cmake --build .  --target logur
   only:                                                                                                       
     - merge_requests                                                                                          
