--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,2 +1,12 @@
-sonar.projectKey=opusdv_liblogur_AX-R-6lptM-IducgQy_S
-sonar.qualitygate.wait=true
+sonar.projectKey=opusdv_liblogur
+sonar.organization=opusdv
+
+# This is the name and version displayed in the SonarCloud UI.
+#sonar.projectName=liblogur
+#sonar.projectVersion=1.0
+
+# Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
+#sonar.sources=.
+
+# Encoding of the source code. Default is default system encoding
+#sonar.sourceEncoding=UTF-8
