--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -32,7 +32,6 @@ get-sonar-binaries:
     - curl -sSLo ./build-wrapper-linux-x86.zip "${SONAR_HOST_URL}/static/cpp/build-wrapper-linux-x86.zip"
     - unzip -oj build-wrapper-linux-x86.zip -d ./build-wrapper
   only:
-    - merge_requests
     - main
 
 dev_build_job:
@@ -64,23 +63,14 @@ sonarcloud-check:
   script:
     - sonar-scanner/bin/sonar-scanner -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.token="${SONAR_TOKEN}" -Dsonar.cfamily.build-wrapper-output=bw-output
   only:
-    - merge_requests
     - main                                       
-            
-
-
-dev_linter:
-  stage: check
-  script:
-    - echo "Start linter cmake-format LLVM Style"
-    - clang-format -i $(find . -name "*.c")
-    - clang-format -i $(find . -name "*.h")
 
 dev_unit_testing_job:
   stage: test
   script:
     - ctest --rerun-failed --output-on-failure
   only:
+    - main
     - dev-v[0-9].[0-9].[0-9]
 
 dev_upload_rpm_job:
