--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -77,6 +77,7 @@ dev_unit_testing_job:
     paths:
       - build/
   script:                                                                                                     
+    - cd build
     - ctest --rerun-failed --output-on-failure 
   only:
     - main
