--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -9,11 +9,17 @@ variables:
   GIT_DEPTH: "0"
 
 stages:
-  - check
+  - validate
   - build
   - test
   - upload
-  - release
+
+dev_clang-format_job:
+  stage: validate
+  script:
+    - find ./src/ ./include/  \( \( -name \*.c -o -name \*.h \) -a ! -iname \*soap\* \) -print0 | xargs -0 -n 1 clang-format --Werror -n --verbose
+  only:
+    - main
 
 get-sonar-binaries:
   stage: .pre
@@ -55,6 +61,36 @@ dev_build_job:
     - build-wrapper/build-wrapper-linux-x86-64 --out-dir bw-output make -C build
   only:
     - main
+
+dev_unit_testing_job:                                                                                         
+  stage: test                                                                                                 
+  cache:                                                                                                      
+    policy: pull                                                                                              
+    key: "${CI_COMMIT_SHORT_SHA}"                                                                             
+    paths:                                                                                                    
+      - build/                                                                                                
+  script:                                                                                                     
+    - ls -l                                                                                                   
+    - cd build                                                                                                
+    - ls -l                                                                                                   
+    - ctest --rerun-failed --output-on-failure
+  only:                                                                                                       
+    - main
+
+dev_build_rpm_job:
+  stage: build
+  cache:
+    policy: pull-push
+    key: "${CI_COMMIT_SHORT_SHA}"
+    paths:                                                                                                    
+      - build/
+    script:
+      - ls -l
+      - cd build
+      - cpack
+  only:
+    - main
+
 sonarcloud-check:
   stage: .post
   cache:
@@ -69,52 +105,3 @@ sonarcloud-check:
   only:
     - main                                       
 
-dev_unit_testing_job:
-  stage: test
-  cache:
-    policy: pull
-    key: "${CI_COMMIT_SHORT_SHA}"
-    paths:
-      - build/
-  script:                                                                                                     
-    - ls -l
-    - cd build
-    - ls -l
-    - ctest --rerun-failed --output-on-failure 
-  only:
-    - main
-    - dev-v[0-9].[0-9].[0-9]
-
-dev_upload_rpm_job:
-  image: curlimages/curl:latest
-  stage: upload
-  needs: 
-    - job: dev_build_job
-      artifacts: true
-  script:
-    - 'curl --header "JOB-TOKEN: $CI_JOB_TOKEN" --upload-file build/liblogur-$CI_COMMIT_BRANCH-$CI_PIPELINE_ID.rpm "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/liblogur/$CI_COMMIT_BRANCH/liblogur-$COMMIT_BRANCH-$CI_PIPELINE_ID.rpm"'
-  only:                                                                                                       
-    - dev-v[0-9].[0-9].[0-9]
-
-release_job:
-  image: registry.gitlab.com/gitlab-org/release-cli:latest
-  stage: release
-  needs:
-    - job: dev_build_job
-      artifacts: true
-  rules:
-    - if: $CI_COMMIT_TAG
-    - if: $CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"
-  script:
-    - echo "CREATE RELEASE"
-  release:
-    name: "Release $CI_COMMIT_TAG"
-    description: 'Created using the release-cli $EXTRA_DESCRIPTION'
-    tag_name: $CI_COMMIT_TAG
-    ref: $CI_COMMIT_TAG
-    milestones:
-      - 'm1'
-    assets:
-      links:
-        - name: "liblogur-$CI_COMMIT_BRANCH.rpm"
-          url: "${CI_API_V4_URL}/projects/${CI_PROJECT_ID}/packages/generic/liblogur/$CI_COMMIT_BRANCH/liblogur-$CI_COMMIT_BRANCH-$CI_PIPELINE_ID.rpm"
