--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -93,8 +93,8 @@ dev_build_rpm_job:
   only:
     - main
 
-dev_docs_job:
-  stage: docs
+dev_doc_job:
+  stage: doc
   cache:                                                                                                      
     policy: pull-push                                                                                         
     key: "${CI_COMMIT_SHORT_SHA}"                                                                             
