--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -94,7 +94,7 @@ dev_build_rpm_job:
     - main
 
 dev_doc_job:
-  stage: doc
+  stage: dock
   cache:                                                                                                      
     policy: pull-push                                                                                         
     key: "${CI_COMMIT_SHORT_SHA}"                                                                             
