--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -96,6 +96,7 @@ sonarcloud-check:
       - sonar-scanner/
       - bw-output/
       - build/
+      - lib/
   script:                                                                                                     
     - sonar-scanner/bin/sonar-scanner -Dsonar.host.url="${SONAR_HOST_URL}" -Dsonar.token="${SONAR_TOKEN}" -Dsonar.cfamily.build-wrapper-output=bw-output
   only:                                                                                                       
@@ -108,6 +109,7 @@ dev_build_rpm_job:
     key: "${CI_COMMIT_SHORT_SHA}"
     paths:                                                                                                    
       - build/
+      - lib/
   script:
     - ls -l
     - cd build
